--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
     <!-- css -->
     <link rel="stylesheet" href="static/style/style.css">
     <!-- scripts -->
-    <script src="static/script/script.js"></script>
+    <script src="static/script/script.js" defer></script>
     <!-- externo -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 
 <body>
-    <form action="">
-        <div>
-            <label for="cep">Digite seu CEP</label>
-            <input type="text" id="cep" placeholder="00000-000">
-        </div>
-        <div>
-            <button type="button" id="btnSearch">Buscar</button>
-        </div>
-    </form>
+    <div class="container">
+        <h1>Consultando endereços!</h1>
+        <form>
+            <div>
+                <label for="cep">Digite o cep:</label>
+                <input type="number" name="cep" id="cep" minlength="8" maxlength="8" required value="29026400">
+            </div>
+            <div>
+                <button type="button" id="consultar">
+                    Enviar
+                </button>
+            </div>
+            <div id="resultado">
+                <p>Seu resultado:</p>
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
