--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
         <form>
             <div>
                 <label for="cep">Digite o cep:</label>
-                <input type="number" name="cep" id="cep" minlength="8" maxlength="8" required value="29026400">
-            </div>
-            <div>
-                <button type="button" id="consultar">
-                    Enviar
-                </button>
+                <input type="number" name="cep" id="cep" minlength="8" maxlength="8" required value="">
             </div>
             <div id="resultado">
                 <p>Seu resultado:</p>
