wip (spinner load)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div id="container">
         <h1>Consultando endereços!</h1>
         <form>
             <div>
@@ -24,6 +24,8 @@
             </div>
             <div id="resultado">
                 <p>Seu resultado:</p>
+                <div class="small-container">
+                </div>
             </div>
         </form>
     </div>
